Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,9 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] > altern"
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        return restaurant\n",
+    "    return a"
    ]
   },
   {
