--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,9 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < len(alternative['pr'])"
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
+    "        return restaurant\n",
+    "    return "
    ]
   },
   {
