--- a/index.ipynb
+++ b/index.ipynb
@@ -403,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
-    "        return restaurant\n",
-    "    return "
+    "        return True\n",
+    "    return False"
    ]
   },
   {
