Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -549,7 +549,9 @@
     }
    ],
    "source": [
-    "high_rating(frontier_restaurant, 4) # True"
+    "high_rating(frontier_restaurant, 4) # True\n",
+    "\n",
+    "bigfacts = \"\""
    ]
   },
   {
