Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'12'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,9 @@
    "source": [
     "high_rating(frontier_restaurant, 4) # True\n",
     "\n",
-    "bigfacts = \"\""
+    "bigfacts = \"12\"\n",
+    "bigfacts\n",
+    "int(big)"
    ]
   },
   {
