Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12'"
+       "12"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
     "\n",
     "bigfacts = \"12\"\n",
     "bigfacts\n",
-    "int(big)"
+    "the_real int(bigfacts)"
    ]
   },
   {
