Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "'12'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,8 @@
     "\n",
     "bigfacts = \"12\"\n",
     "bigfacts\n",
-    "the_real int(bigfacts)"
+    "the_real = int(bigfacts)\n",
+    "bigfacts"
    ]
   },
   {
