Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12'"
+       "12"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
     "bigfacts = \"12\"\n",
     "bigfacts\n",
     "the_real = int(bigfacts)\n",
-    "bigfacts"
+    "the_real"
    ]
   },
   {
